--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </div><!--wrapper-->
             </div><!--tit-->
             <div class="list">
-            <a href="../geoje/index.html"> 
+            <a href="content/project01.html"> 
                     <div class="wrapper">
                         <div class="list_sub">
                             <span>거제문화관광 사이트 개편</span>
