--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                             <li><span>HTML</span></li>
                             <li><span>CSS</span></li>
                             <li><span>jQuery</span></li>
+                            <li><span>GIT</span></li>
                         </ul>
                     </div>
 
