--- a/content/project01.html
+++ b/content/project01.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/jquery-3.7.1.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/sub_1.css">
     <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon">
@@ -12,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1 class="home"><a href="index.html"><span>HOME</span></a></h1>
+        <h1 class="home"><a href="../index.html"><span>HOME</span></a></h1>
         <nav class="gnb">
             <ul>
                 <li><a href="#n" class="curr"><span>GEOJE</span></a></li>
@@ -25,30 +24,55 @@
     </header>
 
     <div class="container">
+        <section class="intro">
+            <div class="wrapper">
+                <div class="txt">
+                    <strong>PROJECT</strong>
+                    <h2>거제문화관광 메인 페이지 개편</h2>
+                    <p>경상남도 거제시의 문화관광 사이트 메인 페이지를 개편했습니다.
+                        복잡하던 정보 구조와 콘텐츠를 정렬하고, 거제시의 자연경관이 잘 드러나도록 디자인 했습니다.</p>
+                    <div class="more"><a href="../geoje/index.html"><span>VIEW ON SITE</span></a></div>
+                </div><!--txt-->
+                <div class="photo">
+                    <img src="../images/content/prj_01.png" alt="">
+                </div><!--photo-->
+                <div class="project">
+                    <div class="list">
+                        <ul>
+                            <li> 
+                                <h3>Type</h3>
+                                <p>Responsive Web Design</p>
+                            </li>
+                            <li> 
+                                <h3>Skills</h3>
+                                <p>Figma / Html / CSS / J-Query</p>
+                            </li>
+                            <li> 
+                                <h3>Contribution</h3>
+                                <p>개인 기여도 100%</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div><!--project-->
+            </div>
+        </section><!--intro-->
+        <section class="overview">
+            <div class="wrapper">
+                <div class="tit">
+                    <h2>OVERVIEW</h2>
+                    <span class="deco"></span>
+                    <p>개편 이전의 사이트는 콘텐츠 양은 많았지만 정리가 되지 않아 원하는 정보를 찾기 어려웠습니다. <br>
+                        폰트의 계층 구조나 콘텐츠 배치 역시 일관성이 부족해, 전체적으로 늘어놓은 듯한 인상을 주며 가독성이 떨어졌습니다.</p>
+                </div>
+                <div class="photo"><img src="../images/content/prj_02.png" alt=""></div>
+                <div class="sub">
+                    <p>전체적인 콘텐츠들을 비슷한 정보들끼리 섹션화하고, 실제 여행객들이 궁금해하거나 필요할 정보들 위주로 구성하였습니다. <br>
+또한 주요 관광지나 교통 정보 등을 상단에 배치하여 사용자가 필요로 하는 정보를 빠르게 접할 수 있도록 했습니다.</p>
+                </div>
+            </div>
+        </section>
+
     </div><!-- container -->
 
-    <!-- <footer data-menu="footer">
-        <div class="wrapper">
-            <div class="thank">
-                <h2>THANK YOU</h2>
-                <p>더 많은 이야기를 들려드릴 수 있길 바랍니다</p>
-            </div>
-            <div class="f_info">
-                <div class="contact">
-                    <h3>CONTACT</h3>
-                    <span>plzsirrla@gmail.com</span>
-                    <span>82+ 010 - 5621 - 1458</span>
-                </div>
-                <div class="more">
-                    <h3>MORE WORK</h3>
-                    <a href="https://www.behance.net/57ae5aa9" target="_blank"><span>BEHANCE</span></a>
-                    <a href="https://www.instagram.com/124.081.6/" target="_blank"><span>INSTAGRAM</span></a>
-                </div>
-            </div>
-            <div class="f_right">
-                <span>Design connects us —<br> through stories, feelings, and time. <br> May these stories inspire your own.</span>
-            </div>
-        </div>
-    </footer> -->
 </body>
 </html>
