--- a/content/project01.html
+++ b/content/project01.html
@@ -31,7 +31,7 @@
                     <h2>거제문화관광 메인 페이지 개편</h2>
                     <p>경상남도 거제시의 문화관광 사이트 메인 페이지를 개편했습니다.
                         복잡하던 정보 구조와 콘텐츠를 정렬하고, 거제시의 자연경관이 잘 드러나도록 디자인 했습니다.</p>
-                    <div class="more"><a href="../geoje/index.html"><span>VIEW ON SITE</span></a></div>
+                    <div class="more"><a href="../geoje/index.html" target="_blank"><span>VIEW ON SITE</span></a></div>
                 </div><!--txt-->
                 <div class="photo">
                     <img src="../images/content/prj_01.png" alt="">
@@ -68,6 +68,34 @@
                 <div class="sub">
                     <p>전체적인 콘텐츠들을 비슷한 정보들끼리 섹션화하고, 실제 여행객들이 궁금해하거나 필요할 정보들 위주로 구성하였습니다. <br>
 또한 주요 관광지나 교통 정보 등을 상단에 배치하여 사용자가 필요로 하는 정보를 빠르게 접할 수 있도록 했습니다.</p>
+                </div>
+            </div>
+        </section>
+        <section class="guide">
+            <div class="wrapper">
+                <div class="tit">
+                    <h2>DESIGN STYLE GUIDE</h2>
+                    <p>거제도의 산과 바다가 맞닿은 자연적 매력을 디자인에 직접적으로 반영하고자 했습니다. <br>
+                        직관적으로 자연의 인상이 느껴지도록 메인 컬러는 푸른 계열로 설정했으며, 몽돌 등 거제 특유의 자연 요소를 시각적으로 담아내기 위해, 비정형 오브젝트들을 곳곳에 배치했습니다.</p>
+                </div>
+                <div class="ctn">
+                    <div class="left">
+                        <h3>LOGO</h3>
+                        <div class="logo_wrap">
+                            <div class="logo01"><img src="../images/content/logo01.png" alt=""></div>
+                            <div class="logo02"><img src="../images/content/logo02.png" alt=""></div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="color">
+                            <h3>COLOR</h3>
+                            <div class="color_photo"><img src="../images/content/color.png" alt=""></div>
+                        </div>
+                        <div class="font">
+                            <h3>FONT</h3>
+                            <div class="color_photo"><img src="../images/content/font_photo.png" alt=""></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
