251207 포폴 / 나비솔 팝업 처리

--- a/content/project01.html
+++ b/content/project01.html
@@ -14,8 +14,8 @@
         <h1 class="home"><a href="../index.html"><span>HOME</span></a></h1>
         <nav class="gnb">
             <ul>
-                <li><a href="#n" class="curr"><span>GEOJE</span></a></li>
-                <li><a href="#n" ><span>UNITED</span></a></li>
+                <li><a href="../content/project01.html" class="curr"><span>GEOJE</span></a></li>
+                <li><a href="../content/project02.html" ><span>UNITED</span></a></li>
                 <li><a href="#n" ><span>NABYSOL</span></a></li>
                 <li><a href="#n" ><span>SAWTOOTH</span></a></li>
                 <li><a href="#n" ><span>KNITTING</span></a></li>
