--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         </div>
                     </div>
             </a>
-                <a href="#n"> 
+                <a href="content/project02.html"> 
                     <div class="wrapper">
                         <div class="list_sub">
                             <span>한국 유나이티드 제약 사이트 개편</span>
@@ -202,7 +202,7 @@
                         </div>
                     </div>
             </a>
-            <a href="#n"> 
+            <a href="content/project03.html"> 
                     <div class="wrapper">
                         <div class="list_sub">
                             <span>청주 나비솔 한의원 사이트 개편</span>
