--- a/content/project02.html
+++ b/content/project02.html
@@ -17,8 +17,8 @@
                 <li><a href="../content/project01.html" ><span>GEOJE</span></a></li>
                 <li><a href="../content/project02.html" class="curr" ><span>UNITED</span></a></li>
                 <li><a href="../content/project03.html" ><span>NABYSOL</span></a></li>
-                <li><a href="#n" ><span>SAWTOOTH</span></a></li>
-                <li><a href="#n" ><span>KNITTING</span></a></li>
+                <li><a href="../content/project04.html" ><span>SHIN</span></a></li>
+                <li><a href="../content/project05.html" ><span>SAWTOOTH</span></a></li>
             </ul>
         </nav>
     </header>
