--- a/content/project03.html
+++ b/content/project03.html
@@ -17,8 +17,8 @@
                 <li><a href="../content/project01.html" ><span>GEOJE</span></a></li>
                 <li><a href="../content/project02.html" ><span>UNITED</span></a></li>
                 <li><a href="../content/project03.html" class="curr" ><span>NABYSOL</span></a></li>
-                <li><a href="#n" ><span>SAWTOOTH</span></a></li>
-                <li><a href="#n" ><span>KNITTING</span></a></li>
+                <li><a href="../content/project04.html" ><span>SHIN</span></a></li>
+                <li><a href="../content/project05.html" ><span>SAWTOOTH</span></a></li>
             </ul>
         </nav>
     </header>
@@ -89,7 +89,11 @@
                         <h3>LOGO</h3>
                             <div class="logo01"><img src="../images/content/nabysol_logo.png" alt=""></div>
                     </div>
-                    
+                </div>
+                <div class="banner">
+                    <h3>BANNER DESIGN</h3>
+                    <img src="../images/content/layerpopup01.jpg" alt="">
+                    <img src="../images/content/layerpopup02.png" alt="">
                 </div>
             </div>
         </section>
