--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             <span>거제문화관광 사이트 개편</span>
                         </div>
                         <div class="right_area">
-                            <div class="list_type"><span>UIUX</span></div>
+                            <div class="list_type"><span>Web</span></div>
                             <div class="list_client"><span>Personal</span></div>
                         </div>
                     </div>
@@ -197,7 +197,7 @@
                             <span>한국 유나이티드 제약 사이트 개편</span>
                         </div>
                         <div class="right_area">
-                            <div class="list_type"><span>UIUX</span></div>
+                            <div class="list_type"><span>Web</span></div>
                             <div class="list_client"><span>Personal</span></div>
                         </div>
                     </div>
@@ -208,12 +208,23 @@
                             <span>청주 나비솔 한의원 사이트 개편</span>
                         </div>
                         <div class="right_area">
-                            <div class="list_type"><span>UIUX</span></div>
+                            <div class="list_type"><span>Web</span></div>
                             <div class="list_client"><span>Personal</span></div>
                         </div>
                     </div>
                 </a>
-                <a href="#n"> 
+                <a href="content/project04.html"> 
+                    <div class="wrapper">
+                        <div class="list_sub">
+                            <span>그래픽 포스터 전시 [바통터치] 출품작 : 신</span>
+                        </div>
+                        <div class="right_area">
+                            <div class="list_type"><span>Graphic</span></div>
+                            <div class="list_client"><span>The Sawtooth</span></div>
+                        </div>
+                    </div>
+                </a>
+                <a href="content/project05.html"> 
                     <div class="wrapper">
                         <div class="list_sub">
                             <span>‘The Sawtooth’ 로고 제작</span>
@@ -224,17 +235,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#n"> 
-                    <div class="wrapper">
-                        <div class="list_sub">
-                            <span>‘KNTTING POINTED’ 브랜딩</span>
-                        </div>
-                        <div class="right_area">
-                            <div class="list_type"><span>Branding</span></div>
-                            <div class="list_client"><span>Personal</span></div>
-                        </div>
-                    </div>
-                </a>
+                
             
             </div><!--list-->
         </section><!--works-->
