--- a/content/project01.html
+++ b/content/project01.html
@@ -16,9 +16,9 @@
             <ul>
                 <li><a href="../content/project01.html" class="curr"><span>GEOJE</span></a></li>
                 <li><a href="../content/project02.html" ><span>UNITED</span></a></li>
-                <li><a href="#n" ><span>NABYSOL</span></a></li>
+                <li><a href="../content/project03.html" ><span>NABYSOL</span></a></li>
+                <li><a href="../content/project04.html" ><span>SHIN</span></a></li>
                 <li><a href="#n" ><span>SAWTOOTH</span></a></li>
-                <li><a href="#n" ><span>KNITTING</span></a></li>
             </ul>
         </nav>
     </header>
