--- a/content/project05.html
+++ b/content/project05.html
@@ -24,7 +24,50 @@
     </header>
 
     <div class="container">
-        <img src="../images/content/sth.png">
+        <section class="intro">
+            <div class="wrapper">
+                <div class="txt">
+                    <strong></strong>
+                    <h2>밴드 ‘The Sawtooth’ 로고 제작</h2>
+                    <p>인디밴드 The Sawtooth의 로고를 제작했습니다. 비정형적이고 노이지한 그래픽으로 해당 밴드의 음악에서 찾아볼 수 있는 디스토션 사운드와 일그러지는 공간계 사운드를 연출하고자 했습니다. </p>
+                </div><!--txt-->
+                <div class="project">
+                    <div class="list">
+                        <ul>
+                            <li>
+                                <h3>Contribution</h3>
+                                <p>개인 기여도 100%</p>
+                            </li>
+                            <li>
+                                <p>Poster Design, Photoshop, Collage</p>
+                                <img src="../images/content/sts_tool.png" alt="">
+                            </li>
+                        </ul>
+                    </div>
+                </div><!--project-->
+            </div>
+        </section><!--intro-->
+        <section class="overview">
+            <div class="wrapper">
+                <div class="tit">
+                    <h2>OVERVIEW</h2>
+                    <p>청춘을 노래하는 밴드 SAWTOOTH 의 로고인 만큼, 청춘이 가진 가변성, 무엇이든 될 수 있지만 그만큼 불안정하고 거친 이미지를 표현해보았습니다.
+‘톱니파’라는 이름을 가진 밴드인 만큼 톱니의 날카로운 느낌을 기본적으로 가져가려 했고, 빛나는 별 모양과 톱니 모양을 결합시켜 보았습니다. 타이포 로고는 볼드한 느낌을 가져가되, 너무 투박하지 않도록 심볼 로고로 포인트를 주었습니다.</p>
+                <div class="over_wrap">
+                   <div class="typo">
+                        <h3>Typography</h3>
+                        <img src="../images/content/sts_overlogo.png" alt="">
+                   </div>
+                   <div class="symbol">
+                        <h3>Symbol Type</h3>
+                        <img src="../images/content/sts_oversym.png" alt="">
+                   </div>
+                </div>
+            </div>
+        </section>
+        <section class="detail">
+            <div class="photo"><img src="../images/content/sts_detaillogo.png" alt=""></div>
+        </section>
     </div><!-- container -->
 
 </body>
