251208 포트폴리오 최종 수정

--- a/content/project01.html
+++ b/content/project01.html
@@ -34,7 +34,7 @@
                     <div class="more"><a href="../geoje/index.html" target="_blank"><span>VIEW ON SITE</span></a></div>
                 </div><!--txt-->
                 <div class="photo">
-                    <img src="../images/content/prj_01.png" alt="">
+                    <a href="../geoje/index.html"  target="_blank"><img src="../images/content/prj_01.png" alt=""></a>
                 </div><!--photo-->
                 <div class="project">
                     <div class="list">
