--- a/content/project02.html
+++ b/content/project02.html
@@ -33,7 +33,7 @@
                     <div class="more"><a href="../united/index.html" target="_blank"><span>VIEW ON SITE</span></a></div>
                 </div><!--txt-->
                 <div class="photo">
-                    <img src="../images/content/united.png" alt="">
+                    <a href="../united/index.html"  target="_blank"><img src="../images/content/united.png" alt=""></a>
                 </div><!--photo-->
                 <div class="project">
                     <div class="list">
