--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="greetings">
                     <h2>
                         안녕하세요 <br>
-                        사람 사이 더 나은 연결을 만드는 디자이너, <span>김솔이</span> 입니다.
+                        사람 사이 더 나은 연결을 만드는 <span>김솔이</span> 입니다.
                     </h2>
                 </div>
 
