--- a/content/project01.html
+++ b/content/project01.html
@@ -10,97 +10,98 @@
     <title>김솔이 | PORTFOLIO - 거제관광문화 개편</title>
 </head>
 <body>
-    <header>
-        <h1 class="home"><a href="../index.html"><span>HOME</span></a></h1>
-        <nav class="gnb">
-            <ul>
-                <li><a href="../content/project01.html" class="curr"><span>GEOJE</span></a></li>
-                <li><a href="../content/project02.html" ><span>UNITED</span></a></li>
-                <li><a href="../content/project03.html" ><span>NABYSOL</span></a></li>
-                <li><a href="../content/project04.html" ><span>SHIN</span></a></li>
-                <li><a href="#n" ><span>SAWTOOTH</span></a></li>
-            </ul>
-        </nav>
-    </header>
+    <div id="wrap">
+        <header>
+            <h1 class="home"><a href="../index.html"><span>HOME</span></a></h1>
+            <nav class="gnb">
+                <ul>
+                    <li><a href="../content/project01.html" class="curr"><span>GEOJE</span></a></li>
+                    <li><a href="../content/project02.html" ><span>UNITED</span></a></li>
+                    <li><a href="../content/project03.html" ><span>NABYSOL</span></a></li>
+                    <li><a href="../content/project04.html" ><span>SHIN</span></a></li>
+                    <li><a href="#n" ><span>SAWTOOTH</span></a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <div class="container">
-        <section class="intro">
-            <div class="wrapper">
-                <div class="txt">
-                    <strong>PROJECT</strong>
-                    <h2>거제문화관광 메인 페이지 개편</h2>
-                    <p>경상남도 거제시의 문화관광 사이트 메인 페이지를 개편했습니다.
-                        복잡하던 정보 구조와 콘텐츠를 정렬하고, 거제시의 자연경관이 잘 드러나도록 디자인 했습니다.</p>
-                    <div class="more"><a href="../geoje/index.html" target="_blank"><span>VIEW ON SITE</span></a></div>
-                </div><!--txt-->
-                <div class="photo">
-                    <a href="../geoje/index.html"  target="_blank"><img src="../images/content/prj_01.png" alt=""></a>
-                </div><!--photo-->
-                <div class="project">
-                    <div class="list">
-                        <ul>
-                            <li> 
-                                <h3>Type</h3>
-                                <p>Responsive Web Design</p>
-                            </li>
-                            <li> 
-                                <h3>Skills</h3>
-                                <p>Figma / Html / CSS / J-Query</p>
-                            </li>
-                            <li> 
-                                <h3>Contribution</h3>
-                                <p>개인 기여도 100%</p>
-                            </li>
-                        </ul>
+        <div class="container">
+            <section class="intro">
+                <div class="wrapper">
+                    <div class="txt">
+                        <strong>PROJECT</strong>
+                        <h2>거제문화관광 메인 페이지 개편</h2>
+                        <p>경상남도 거제시의 문화관광 사이트 메인 페이지를 개편했습니다.
+                            복잡하던 정보 구조와 콘텐츠를 정렬하고, 거제시의 자연경관이 잘 드러나도록 디자인 했습니다.</p>
+                        <div class="more"><a href="../geoje/index.html" target="_blank"><span>VIEW ON SITE</span></a></div>
+                    </div><!--txt-->
+                    <div class="photo">
+                        <a href="../geoje/index.html"  target="_blank"><img src="../images/content/prj_01.png" alt=""></a>
+                    </div><!--photo-->
+                    <div class="project">
+                        <div class="list">
+                            <ul>
+                                <li> 
+                                    <h3>Type</h3>
+                                    <p>Responsive Web Design</p>
+                                </li>
+                                <li> 
+                                    <h3>Skills</h3>
+                                    <p>Figma / Html / CSS / J-Query</p>
+                                </li>
+                                <li> 
+                                    <h3>Contribution</h3>
+                                    <p>개인 기여도 100%</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div><!--project-->
+                </div>
+            </section><!--intro-->
+            <section class="overview">
+                <div class="wrapper">
+                    <div class="tit">
+                        <h2>OVERVIEW</h2>
+                        <span class="deco"></span>
+                        <p>개편 이전의 사이트는 콘텐츠 양은 많았지만 정리가 되지 않아 원하는 정보를 찾기 어려웠습니다. <br>
+                            폰트의 계층 구조나 콘텐츠 배치 역시 일관성이 부족해, 전체적으로 늘어놓은 듯한 인상을 주며 가독성이 떨어졌습니다.</p>
                     </div>
-                </div><!--project-->
-            </div>
-        </section><!--intro-->
-        <section class="overview">
-            <div class="wrapper">
-                <div class="tit">
-                    <h2>OVERVIEW</h2>
-                    <span class="deco"></span>
-                    <p>개편 이전의 사이트는 콘텐츠 양은 많았지만 정리가 되지 않아 원하는 정보를 찾기 어려웠습니다. <br>
-                        폰트의 계층 구조나 콘텐츠 배치 역시 일관성이 부족해, 전체적으로 늘어놓은 듯한 인상을 주며 가독성이 떨어졌습니다.</p>
-                </div>
-                <div class="photo"><img src="../images/content/prj_02.png" alt=""></div>
-                <div class="sub">
-                    <p>전체적인 콘텐츠들을 비슷한 정보들끼리 섹션화하고, 실제 여행객들이 궁금해하거나 필요할 정보들 위주로 구성하였습니다. <br>
-또한 주요 관광지나 교통 정보 등을 상단에 배치하여 사용자가 필요로 하는 정보를 빠르게 접할 수 있도록 했습니다.</p>
-                </div>
-            </div>
-        </section>
-        <section class="guide">
-            <div class="wrapper">
-                <div class="tit">
-                    <h2>DESIGN STYLE GUIDE</h2>
-                    <p>거제도의 산과 바다가 맞닿은 자연적 매력을 디자인에 직접적으로 반영하고자 했습니다. <br>
-                        직관적으로 자연의 인상이 느껴지도록 메인 컬러는 푸른 계열로 설정했으며, 몽돌 등 거제 특유의 자연 요소를 시각적으로 담아내기 위해, 비정형 오브젝트들을 곳곳에 배치했습니다.</p>
-                </div>
-                <div class="ctn">
-                    <div class="left">
-                        <h3>LOGO</h3>
-                        <div class="logo_wrap">
-                            <div class="logo01"><img src="../images/content/logo01.png" alt=""></div>
-                            <div class="logo02"><img src="../images/content/logo02.png" alt=""></div>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="color">
-                            <h3>COLOR</h3>
-                            <div class="color_photo"><img src="../images/content/color.png" alt=""></div>
-                        </div>
-                        <div class="font">
-                            <h3>FONT</h3>
-                            <div class="color_photo"><img src="../images/content/font_photo.png" alt=""></div>
-                        </div>
+                    <div class="photo"><img src="../images/content/prj_02.png" alt=""></div>
+                    <div class="sub">
+                        <p>전체적인 콘텐츠들을 비슷한 정보들끼리 섹션화하고, 실제 여행객들이 궁금해하거나 필요할 정보들 위주로 구성하였습니다. <br>
+    또한 주요 관광지나 교통 정보 등을 상단에 배치하여 사용자가 필요로 하는 정보를 빠르게 접할 수 있도록 했습니다.</p>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+            <section class="guide">
+                <div class="wrapper">
+                    <div class="tit">
+                        <h2>DESIGN STYLE GUIDE</h2>
+                        <p>거제도의 산과 바다가 맞닿은 자연적 매력을 디자인에 직접적으로 반영하고자 했습니다. <br>
+                            직관적으로 자연의 인상이 느껴지도록 메인 컬러는 푸른 계열로 설정했으며, 몽돌 등 거제 특유의 자연 요소를 시각적으로 담아내기 위해, 비정형 오브젝트들을 곳곳에 배치했습니다.</p>
+                    </div>
+                    <div class="ctn">
+                        <div class="left">
+                            <h3>LOGO</h3>
+                            <div class="logo_wrap">
+                                <div class="logo01"><img src="../images/content/logo01.png" alt=""></div>
+                                <div class="logo02"><img src="../images/content/logo02.png" alt=""></div>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <div class="color">
+                                <h3>COLOR</h3>
+                                <div class="color_photo"><img src="../images/content/color.png" alt=""></div>
+                            </div>
+                            <div class="font">
+                                <h3>FONT</h3>
+                                <div class="color_photo"><img src="../images/content/font_photo.png" alt=""></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-    </div><!-- container -->
-
+        </div><!-- container -->
+    </div>
 </body>
 </html>
