--- a/content/project02.html
+++ b/content/project02.html
@@ -10,88 +10,89 @@
     <title>김솔이 | PORTFOLIO - 한국유나이티드제약 개편</title>
 </head>
 <body>
-    <header>
-        <h1 class="home"><a href="../index.html"><span>HOME</span></a></h1>
-        <nav class="gnb">
-            <ul>
-                <li><a href="../content/project01.html" ><span>GEOJE</span></a></li>
-                <li><a href="../content/project02.html" class="curr" ><span>UNITED</span></a></li>
-                <li><a href="../content/project03.html" ><span>NABYSOL</span></a></li>
-                <li><a href="../content/project04.html" ><span>SHIN</span></a></li>
-                <li><a href="../content/project05.html" ><span>SAWTOOTH</span></a></li>
-            </ul>
-        </nav>
-    </header>
+    <div id="wrap">
+        <header>
+            <h1 class="home"><a href="../index.html"><span>HOME</span></a></h1>
+            <nav class="gnb">
+                <ul>
+                    <li><a href="../content/project01.html" ><span>GEOJE</span></a></li>
+                    <li><a href="../content/project02.html" class="curr" ><span>UNITED</span></a></li>
+                    <li><a href="../content/project03.html" ><span>NABYSOL</span></a></li>
+                    <li><a href="../content/project04.html" ><span>SHIN</span></a></li>
+                    <li><a href="../content/project05.html" ><span>SAWTOOTH</span></a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <div class="container">
-        <section class="intro">
-            <div class="wrapper">
-                <div class="txt">
-                    <strong>PROJECT</strong>
-                    <h2>한국유나이티드제약 <br> 메인 페이지 개편</h2>
-                    <p>한국유나이티드제약의 글로벌 제약사로서의 정체성을 강화하고, 미래지향적인 브랜드 경험을 전달하기 위해 웹사이트를 재구성했습니다. 글래스모피즘 기반의 시각 언어로 기술력과 신뢰감을 동시에 표현하는 방향을 설정했습니다.</p>
-                    <div class="more"><a href="../united/index.html" target="_blank"><span>VIEW ON SITE</span></a></div>
-                </div><!--txt-->
-                <div class="photo">
-                    <a href="../united/index.html"  target="_blank"><img src="../images/content/united.png" alt=""></a>
-                </div><!--photo-->
-                <div class="project">
-                    <div class="list">
-                        <ul>
-                            <li> 
-                                <h3>Type</h3>
-                                <p>Responsive Web Design</p>
-                            </li>
-                            <li> 
-                                <h3>Skills</h3>
-                                <p>Figma / Html / CSS / J-Query</p>
-                            </li>
-                            <li> 
-                                <h3>Contribution</h3>
-                                <p>개인 기여도 100%</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div><!--project-->
-            </div>
-        </section><!--intro-->
-        <section class="overview">
-            <div class="wrapper">
-                <div class="tit">
-                    <h2>OVERVIEW</h2>
-                    <p>기존 사이트는 글로벌 제약사로서의 규모와 혁신성을 시각적으로 충분히 전달하지 못해 브랜드 톤이 다소 약하게 느껴졌습니다. 
-                        <br> 따라서 개편 사이트에서는 블루를 중심으로 톤 앤 매너를 재정렬하고, 해외 파트너십 현황, 수출 실적, 주요 인증 등 기업의 핵심 성과를 직관적으로 보여주는 방향으로 디자인을 재구성했습니다.</p>
-                </div>
-                <div class="photo"><img src="../images/content/united02.png" alt=""></div>
-            </div>
-        </section>
-        <section class="guide">
-            <div class="wrapper">
-                <div class="tit">
-                    <h2>DESIGN STYLE GUIDE</h2>
-                    <p>화이트·블루 기반의 미래지향적 비주얼로 브랜드의 청결함과 혁신성을 강화했으며, 글래스모피즘과 AI 그래픽을 통해 전문적인 이미지를 구축했습니다. 또한 로고에서는 사람 얼굴 요소를 제거하고 십자 형태를 명확히 해 제약 기업의 정체성을 더욱 직접적으로 드러내도록 단순화했습니다.</p>
-                </div>
-                <div class="ctn">
-                    <div class="font">
-                        <h3>FONT</h3>
-                        <div class="color_photo"><img src="../images/content/united_font.png" alt=""></div>
-                    </div>
-                    <div class="color">
-                        <h3>COLOR</h3>
-                        <div class="color_photo"><img src="../images/content/united_color.png" alt=""></div>
-                    </div>
-                    <div class="logo">
-                        <h3>LOGO</h3>
-                        <div class="logo_wrap">
-                            <div class="logo01"><img src="../images/content/united_logo.png" alt=""></div>
+        <div class="container">
+            <section class="intro">
+                <div class="wrapper">
+                    <div class="txt">
+                        <strong>PROJECT</strong>
+                        <h2>한국유나이티드제약 <br> 메인 페이지 개편</h2>
+                        <p>한국유나이티드제약의 글로벌 제약사로서의 정체성을 강화하고, 미래지향적인 브랜드 경험을 전달하기 위해 웹사이트를 재구성했습니다. 글래스모피즘 기반의 시각 언어로 기술력과 신뢰감을 동시에 표현하는 방향을 설정했습니다.</p>
+                        <div class="more"><a href="../united/index.html" target="_blank"><span>VIEW ON SITE</span></a></div>
+                    </div><!--txt-->
+                    <div class="photo">
+                        <a href="../united/index.html"  target="_blank"><img src="../images/content/united.png" alt=""></a>
+                    </div><!--photo-->
+                    <div class="project">
+                        <div class="list">
+                            <ul>
+                                <li> 
+                                    <h3>Type</h3>
+                                    <p>Responsive Web Design</p>
+                                </li>
+                                <li> 
+                                    <h3>Skills</h3>
+                                    <p>Figma / Html / CSS / J-Query</p>
+                                </li>
+                                <li> 
+                                    <h3>Contribution</h3>
+                                    <p>개인 기여도 100%</p>
+                                </li>
+                            </ul>
                         </div>
-                    </div>
-                    
+                    </div><!--project-->
                 </div>
-            </div>
-        </section>
+            </section><!--intro-->
+            <section class="overview">
+                <div class="wrapper">
+                    <div class="tit">
+                        <h2>OVERVIEW</h2>
+                        <p>기존 사이트는 글로벌 제약사로서의 규모와 혁신성을 시각적으로 충분히 전달하지 못해 브랜드 톤이 다소 약하게 느껴졌습니다. 
+                            <br> 따라서 개편 사이트에서는 블루를 중심으로 톤 앤 매너를 재정렬하고, 해외 파트너십 현황, 수출 실적, 주요 인증 등 기업의 핵심 성과를 직관적으로 보여주는 방향으로 디자인을 재구성했습니다.</p>
+                    </div>
+                    <div class="photo"><img src="../images/content/united02.png" alt=""></div>
+                </div>
+            </section>
+            <section class="guide">
+                <div class="wrapper">
+                    <div class="tit">
+                        <h2>DESIGN STYLE GUIDE</h2>
+                        <p>화이트·블루 기반의 미래지향적 비주얼로 브랜드의 청결함과 혁신성을 강화했으며, 글래스모피즘과 AI 그래픽을 통해 전문적인 이미지를 구축했습니다. 또한 로고에서는 사람 얼굴 요소를 제거하고 십자 형태를 명확히 해 제약 기업의 정체성을 더욱 직접적으로 드러내도록 단순화했습니다.</p>
+                    </div>
+                    <div class="ctn">
+                        <div class="font">
+                            <h3>FONT</h3>
+                            <div class="color_photo"><img src="../images/content/united_font.png" alt=""></div>
+                        </div>
+                        <div class="color">
+                            <h3>COLOR</h3>
+                            <div class="color_photo"><img src="../images/content/united_color.png" alt=""></div>
+                        </div>
+                        <div class="logo">
+                            <h3>LOGO</h3>
+                            <div class="logo_wrap">
+                                <div class="logo01"><img src="../images/content/united_logo.png" alt=""></div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+            </section>
 
-    </div><!-- container -->
-
+        </div><!-- container -->
+    </div>
 </body>
 </html>
