--- a/content/project04.html
+++ b/content/project04.html
@@ -10,69 +10,70 @@
     <title>김솔이 | PORTFOLIO - [바통터치] 출품작 : 신</title>
 </head>
 <body>
-    <header>
-        <h1 class="home"><a href="../index.html"><span>HOME</span></a></h1>
-        <nav class="gnb">
-            <ul>
-                <li><a href="../content/project01.html" ><span>GEOJE</span></a></li>
-                <li><a href="../content/project02.html" ><span>UNITED</span></a></li>
-                <li><a href="../content/project03.html"  ><span>NABYSOL</span></a></li>
-                <li><a href="../content/project04.html" class="curr"><span>SHIN</span></a></li>
-                <li><a href="../content/project05.html" ><span>SAWTOOTH</span></a></li>
-            </ul>
-        </nav>
-    </header>
+    <div id="wrap">
+        <header>
+            <h1 class="home"><a href="../index.html"><span>HOME</span></a></h1>
+            <nav class="gnb">
+                <ul>
+                    <li><a href="../content/project01.html" ><span>GEOJE</span></a></li>
+                    <li><a href="../content/project02.html" ><span>UNITED</span></a></li>
+                    <li><a href="../content/project03.html"  ><span>NABYSOL</span></a></li>
+                    <li><a href="../content/project04.html" class="curr"><span>SHIN</span></a></li>
+                    <li><a href="../content/project05.html" ><span>SAWTOOTH</span></a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <div class="container">
-        <section class="intro">
-            <div class="wrapper">
-                <div class="txt">
-                    <strong>信</strong>
-                    <h2>[바통터치] 출품작 : 신(信)</h2>
-                    <p>내면의 조각들이 모여 형성된 손은, 기도하는 모습 같기도 하고, 등을 조용히 토닥이는 손처럼도 보입니다. '믿음'이라는 주제를 시각적으로 풀어내기 위해, 신뢰를 상징하는 초록과 따뜻한 색감을 중심으로 보정하며 작품의 분위기를 완성했습니다. 작품의 제목인 ‘신(信)’은 ‘믿을 신’ 자에서 따온 것으로, ‘믿음’이라는 키워드에 다층적인 의미를 더했습니다.</p>
-                </div><!--txt-->
-                <div class="project">
-                    <div class="list">
-                        <ul>
-                            <li>
-                                <h3>Contribution</h3>
-                                <p>개인 기여도 100%</p>
-                            </li>
-                            <li>
-                                <p>Poster Design, Photoshop, Collage</p>
-                                <img src="../images/content/exh_tool.jpg" alt="">
-                            </li>
-                        </ul>
+        <div class="container">
+            <section class="intro">
+                <div class="wrapper">
+                    <div class="txt">
+                        <strong>信</strong>
+                        <h2>[바통터치] 출품작 : 신(信)</h2>
+                        <p>내면의 조각들이 모여 형성된 손은, 기도하는 모습 같기도 하고, 등을 조용히 토닥이는 손처럼도 보입니다. '믿음'이라는 주제를 시각적으로 풀어내기 위해, 신뢰를 상징하는 초록과 따뜻한 색감을 중심으로 보정하며 작품의 분위기를 완성했습니다. 작품의 제목인 ‘신(信)’은 ‘믿을 신’ 자에서 따온 것으로, ‘믿음’이라는 키워드에 다층적인 의미를 더했습니다.</p>
+                    </div><!--txt-->
+                    <div class="project">
+                        <div class="list">
+                            <ul>
+                                <li>
+                                    <h3>Contribution</h3>
+                                    <p>개인 기여도 100%</p>
+                                </li>
+                                <li>
+                                    <p>Poster Design, Photoshop, Collage</p>
+                                    <img src="../images/content/exh_tool.jpg" alt="">
+                                </li>
+                            </ul>
+                        </div>
+                    </div><!--project-->
+                </div>
+            </section><!--intro-->
+            <section class="overview">
+                <div class="wrapper">
+                    <div class="tit">
+                        <h2>OVERVIEW</h2>
+                        <strong>“ 당신이 디자인을 계속하게 만드는 '믿음'은 무엇인가요? ”</strong>
+                        <p>믿음은 누군가에게는 종교일 수 있고, 자기 자신을 향한 신뢰일 수도 있습니다. 저에게는 주변 사람들의 믿음이 가장 큰 원동력이 되어주었습니다. 
+                            <br> 때로는 무모한 선택처럼 보였던 길에도 묵묵히 곁을 지켜준 이들의 신뢰가 있었기에, 저는 오늘도 디자인을 계속해나갈 수 있었습니다.
+                            <br> 손이라는 주제를 사용하여, 제가 생각하는, 그리고 지금의 제가 있을 수 있었던 믿음의 형태를 표현해보았습니다.</p>
+                    <div class="photo">
+                        <img src="../images/content/exh_over.jpg" alt="">
                     </div>
-                </div><!--project-->
-            </div>
-        </section><!--intro-->
-        <section class="overview">
-            <div class="wrapper">
-                <div class="tit">
-                    <h2>OVERVIEW</h2>
-                    <strong>“ 당신이 디자인을 계속하게 만드는 '믿음'은 무엇인가요? ”</strong>
-                    <p>믿음은 누군가에게는 종교일 수 있고, 자기 자신을 향한 신뢰일 수도 있습니다. 저에게는 주변 사람들의 믿음이 가장 큰 원동력이 되어주었습니다. 
-                        <br> 때로는 무모한 선택처럼 보였던 길에도 묵묵히 곁을 지켜준 이들의 신뢰가 있었기에, 저는 오늘도 디자인을 계속해나갈 수 있었습니다.
-                        <br> 손이라는 주제를 사용하여, 제가 생각하는, 그리고 지금의 제가 있을 수 있었던 믿음의 형태를 표현해보았습니다.</p>
-                <div class="photo">
-                    <img src="../images/content/exh_over.jpg" alt="">
                 </div>
-            </div>
-        </section>
-        <section class="detail">
-            <div class="wrapper">
-                <div class="photo">
-                    <img src="../images/content/exh_detail.jpg" alt="">
+            </section>
+            <section class="detail">
+                <div class="wrapper">
+                    <div class="photo">
+                        <img src="../images/content/exh_detail.jpg" alt="">
+                    </div>
+                    <div class="exh_wrap">
+                        <img class="exh01" src="../images/content/exh01.jpg" alt="">
+                        <img class="exh02" src="../images/content/exh02.jpg" alt="">
+                    </div>
+                    <p>실제 전시 현장 스케치 사진</p>
                 </div>
-                <div class="exh_wrap">
-                    <img class="exh01" src="../images/content/exh01.jpg" alt="">
-                    <img class="exh02" src="../images/content/exh02.jpg" alt="">
-                </div>
-                <p>실제 전시 현장 스케치 사진</p>
-            </div>
-        </section>
-    </div><!-- container -->
-
+            </section>
+        </div><!-- container -->
+    </div>
 </body>
 </html>
