--- a/content/project05.html
+++ b/content/project05.html
@@ -40,7 +40,7 @@
                                     <p>개인 기여도 100%</p>
                                 </li>
                                 <li>
-                                    <p>Poster Design, Photoshop, Collage</p>
+                                    <p>Logo Design, Illustrator</p>
                                     <img src="../images/content/sts_tool.png" alt="">
                                 </li>
                             </ul>
