새창 열기 타이틀 (접근성)

--- a/content/project01.html
+++ b/content/project01.html
@@ -32,7 +32,7 @@
                         <h2>거제문화관광 메인 페이지 개편</h2>
                         <p>경상남도 거제시의 문화관광 사이트 메인 페이지를 개편했습니다.
                             복잡하던 정보 구조와 콘텐츠를 정렬하고, 거제시의 자연경관이 잘 드러나도록 디자인 했습니다.</p>
-                        <div class="more"><a href="../geoje/index.html" target="_blank"><span>VIEW ON SITE</span></a></div>
+                        <div class="more"><a href="../geoje/index.html" target="_blank" title="새 창으로 열기"><span>VIEW ON SITE</span></a></div>
                     </div><!--txt-->
                     <div class="photo">
                         <a href="../geoje/index.html"  target="_blank"><img src="../images/content/prj_01.png" alt=""></a>
