--- a/content/project02.html
+++ b/content/project02.html
@@ -31,7 +31,7 @@
                         <strong>PROJECT</strong>
                         <h2>한국유나이티드제약 <br> 메인 페이지 개편</h2>
                         <p>한국유나이티드제약의 글로벌 제약사로서의 정체성을 강화하고, 미래지향적인 브랜드 경험을 전달하기 위해 웹사이트를 재구성했습니다. 글래스모피즘 기반의 시각 언어로 기술력과 신뢰감을 동시에 표현하는 방향을 설정했습니다.</p>
-                        <div class="more"><a href="../united/index.html" target="_blank"><span>VIEW ON SITE</span></a></div>
+                        <div class="more"><a href="../united/index.html" target="_blank" title="새 창으로 열기"><span>VIEW ON SITE</span></a></div>
                     </div><!--txt-->
                     <div class="photo">
                         <a href="../united/index.html"  target="_blank"><img src="../images/content/united.png" alt=""></a>
