--- a/content/project03.html
+++ b/content/project03.html
@@ -31,7 +31,7 @@
                         <strong>PROJECT</strong>
                         <h2>청주 나비솔 한방병원 <br> 메인 페이지 개편</h2>
                         <p>청주 나비솔 한방병원 사이트의 메인 페이지를 개편했습니다. 한방병원 특유의 편안하고 따뜻한 톤을 살리려 했으며, 사이트 이용자들이 병원 서비스를 빠르게 찾아볼 수 있도록 퀵메뉴를 구현했습니다.</p>
-                        <div class="more"><a href="../nabysol/index.html" target="_blank"><span>VIEW ON SITE</span></a></div>
+                        <div class="more"><a href="../nabysol/index.html" target="_blank" title="새 창으로 열기"><span>VIEW ON SITE</span></a></div>
                     </div><!--txt-->
                     <div class="photo">
                         <a href="../nabysol/index.html" target="_blank"><img src="../images/content/nabysol.png" alt=""></a>
