--- a/gunsan/index.html
+++ b/gunsan/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+
+    <script src="js/main.js"></script>
+    <script src="js/common.js"></script>
     <link rel="stylesheet" href="css/main.css">
     <title>군산시청</title>
 </head>
 <body>
     <div id="wrap">
         <!--PC에서 메뉴가 열리면 open_pc-->
-        <header class="open_pc">
+        <header class="">
             <div class="header_top">
                 <ul>
                     <li>
@@ -30,14 +36,13 @@
                         <div class="gnb_lang"><button><span>Language</span></button></div>
                         <ul class="depth1">
                             <!-- 1) 민원안내 -->
-                            <li class="over">
+                            <li class="">
                                 <a href="#n"><span>민원안내</span></a>
                                 <div class="depth2_wrap">
                                     <div class="slogan">
                                         <span>시민과 함께하는 자립도시</span>
                                         <h2>민원안내</h2>
                                     </div>
-
                                     <ul class="depth2">
                                         <li>
                                             <a href="#n"><span>민원창구안내</span></a>
