--- a/gunsan/index.html
+++ b/gunsan/index.html
@@ -17,7 +17,7 @@
     <div id="wrap">
         <!--PC에서 메뉴가 열리면 open_pc
             모바일에서 메뉴가 열리면 open_mo-->
-        <header class="open_mo">
+        <header class="">
             <div class="header_top">
                 <ul>
                     <li>
@@ -38,7 +38,7 @@
                         <div class="gnb_lang"><button><span>Language</span></button></div>
                         <ul class="depth1">
                             <!-- 1) 민원안내 -->
-                            <li class="">
+                            <li class="select">
                                 <a href="#n"><span>민원안내</span></a>
                                 <div class="depth2_wrap">
                                     <div class="slogan">
@@ -58,7 +58,7 @@
                                             </ul>
                                         </li>
 
-                                        <li>
+                                        <li class="">
                                             <a href="#n"><span>여권민원</span></a>
                                             <ul class="depth3">
                                                 <li><a href="#n"><span>여권발급안내</span></a></li>
@@ -703,7 +703,7 @@
                                 </div>
                             </li>
                         </ul>
-                        <button class="gnb_close"><span>메뉴닫기</span></button>
+                        <button class="gnb_close"><span class="blind">메뉴닫기</span></button>
                     </div>
                 </nav><!--gnb-->
             </div>
