--- a/gunsan/index.html
+++ b/gunsan/index.html
@@ -725,8 +725,20 @@
                             </dl>
                         </div>
                     </div>
+                    <div class="search">
+                    <form>
+                        <fieldset>
+                            <legend>검색어 입력</legend>
+                            <div class="sch_wrap">
+                                <label for="keyword">검색어 입력</label>
+                                <input type="text" id="keyword" placeholder="검색어를 입력해주세요">
+                                <input type="submit" value="검색">
+                            </div><!--sch_wrap(입력창 테두리)-->
+                        </fieldset>
+                    </form>
+                </div><!--search-->
                 </div>
-                <div class="search"></div>
+                
             </section>
         </div>
         <footer></footer>
