--- a/gunsan/index.html
+++ b/gunsan/index.html
@@ -731,7 +731,7 @@
                             <legend>검색어 입력</legend>
                             <div class="sch_wrap">
                                 <label for="keyword">검색어 입력</label>
-                                <input type="text" id="keyword" placeholder="검색어를 입력해주세요">
+                                <input type="text" id="keyword" placeholder="군산시에 궁금하신 점이 있으신가요?">
                                 <input type="submit" value="검색">
                             </div><!--sch_wrap(입력창 테두리)-->
                         </fieldset>
