--- a/gunsan/index.html
+++ b/gunsan/index.html
@@ -740,6 +740,81 @@
                 </div>
                 
             </section>
+            <section class="main_content">
+                <div class="wrapper">
+                    <div class="popup">
+                        <div class="swiper"> <!-- 팝업의 높이와 넓이를 css에서 줄 수 있는 요소-->
+                            <ul class="swiper-wrapper"> <!-- 각 팝업 콘텐츠를 감싸는 요소-->
+                                <li class="swiper-slide pop01">
+                                    <a>
+                                        <div class="photo">
+                                            <img src="images/main/popup01.jpg" alt="">
+                                        </div>
+                                    </a>
+                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                <li class="swiper-slide pop01">
+                                    <a>
+                                        <div class="photo">
+                                            <img src="images/main/popup01.jpg" alt="">
+                                        </div>
+                                    </a>
+                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                <li class="swiper-slide pop01">
+                                    <a>
+                                        <div class="photo">
+                                            <img src="images/main/popup01.jpg" alt="">
+                                        </div>
+                                    </a>
+                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                <li class="swiper-slide pop01">
+                                    <a>
+                                        <div class="photo">
+                                            <img src="images/main/popup01.jpg" alt="">
+                                        </div>
+                                    </a>
+                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                <li class="swiper-slide pop01">
+                                    <a>
+                                        <div class="photo">
+                                            <img src="images/main/popup01.jpg" alt="">
+                                        </div>
+                                    </a>
+                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                <li class="swiper-slide pop01">
+                                    <a>
+                                        <div class="photo">
+                                            <img src="images/main/popup01.jpg" alt="">
+                                        </div>
+                                    </a>
+                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                <li class="swiper-slide pop01">
+                                    <a>
+                                        <div class="photo">
+                                            <img src="images/main/popup01.jpg" alt="">
+                                        </div>
+                                    </a>
+                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                <li class="swiper-slide pop01">
+                                    <a>
+                                        <div class="photo">
+                                            <img src="images/main/popup01.jpg" alt="">
+                                        </div>
+                                    </a>
+                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                            </ul>
+                            <div class="ctrl_btn">
+                                <button class="prev"><span class="blind">이전 팝업 보기</span></button>
+                                <div class="paging"></div>
+                                <button class="next"><span class="blind">다음 팝업 보기</span></button>
+                                <button class="stop"><span class="blind">팝업 정지</span></button>
+                                <button class="play"><span class="blind">팝업 재생</span></button>
+                            </div>
+                        </div><!--swiper-->
+                    </div>
+                    <div class="sug"></div>
+                    <div class="mayor"></div>
+                </div>
+            </section>
         </div>
         <footer></footer>
     </div><!--wrap-->
